// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Select" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <div
    className="css-2ocyf0-Select"
  >
    <div
      className=" css-dkntwv-SelectContainer"
      onKeyDown={[Function]}
    >
      <div
        tabIndex={0}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-6smaub-Control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-16ieua5-ValueContainer"
          >
            <div
              className=" css-14el2xx-placeholder"
              id="react-select-2-placeholder"
            >
              Select...
            </div>
             
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-2-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-2-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={-1}
              value=""
            />
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              className=" css-1xjgjl1-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              className=" css-1186e7r-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                className="css-1tuya7p-DropdownIndicator"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <g>
                  <path
                    d="M7.99963 12.5711L15.6565 4.91421L14.2423 3.5L7.99963 9.74264L1.75699 3.5L0.342773 4.91421L7.99963 12.5711Z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`"Select" renders as disabled 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <div
    className="css-2ocyf0-Select"
  >
    <div
      className=" css-19vi2h5-SelectContainer"
      onKeyDown={[Function]}
    >
      <div
        tabIndex={0}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-3-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-6smaub-Control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-16ieua5-ValueContainer"
          >
            <div
              className=" css-14el2xx-placeholder"
              id="react-select-3-placeholder"
            >
              Select...
            </div>
             
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-3-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={true}
              id="react-select-3-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={-1}
              value=""
            />
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              className=" css-1xjgjl1-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              className=" css-zbce0a-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                className="css-1tuya7p-DropdownIndicator"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <g>
                  <path
                    d="M7.99963 12.5711L15.6565 4.91421L14.2423 3.5L7.99963 9.74264L1.75699 3.5L0.342773 4.91421L7.99963 12.5711Z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`"Select" renders as invalid 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <div
    className="css-yrzhnj-Select"
  >
    <div
      className=" css-g607jh-SelectContainer"
      onKeyDown={[Function]}
    >
      <div
        tabIndex={0}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-4-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-6smaub-Control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-16ieua5-ValueContainer"
          >
            <div
              className=" css-14el2xx-placeholder"
              id="react-select-4-placeholder"
            >
              Select...
            </div>
             
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-4-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-4-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={-1}
              value=""
            />
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              className=" css-1xjgjl1-IndicatorSeparator"
            />
            <div
              aria-hidden="true"
              className=" css-1186e7r-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                className="css-1tuya7p-DropdownIndicator"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <g>
                  <path
                    d="M7.99963 12.5711L15.6565 4.91421L14.2423 3.5L7.99963 9.74264L1.75699 3.5L0.342773 4.91421L7.99963 12.5711Z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
